# slap-your-openclaw

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh-Hant.md  build.rs  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/plans/: 2026-02-28-implementation-plan.md  2026-02-28-slap-your-openclaw-design.md
skill/: SKILL.md
src/: config.rs  main.rs  mqtt.rs  openclaw.rs  shared.rs
src/detector/: mod.rs  ring.rs
src/mcp/: server.rs
src/sensor/: iokit.c  iokit.rs  mod.rs
