[package]
name = "slap-your-openclaw"
version = "0.1.0"
edition = "2021"
description = "Detect laptop slaps via Apple Silicon accelerometer, publish MQTT events to OpenClaw"
license = "MIT"

[[bin]]
name = "slap-your-openclaw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cc = "1"
