[package]
name = "slap-your-openclaw"
version = "0.1.0"
edition = "2021"
description = "slap-your-openclaw - Detect MacBook slaps and trigger OpenClaw roast events"
license = "MIT"

[[bin]]
name = "slap-your-openclaw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"
